# telos

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Dockerfile  ISSUES_AND_ROADMAP.md  Project_overview.md  README.md  config.yaml  diagnose_orch.py  docker-compose.yml  pyproject.toml  rubric.json  setup.sh  telos.yaml
.claude/: CLAUDE.md
.kiro/specs/monad-template/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/telos-observation-ui-redesign/: .config.kiro  design.md  requirements.md  tasks.md
docs/:  vision.md  ARCHITECTURE.md  PROJECT.md
docs/P1/: P1-plan.md
docs/swe-bench/: bench-run-1.md
scripts/: optimize_ollama.sh  run_unattended.sh
src/telos/: agents.py  cli.py  config.py  critic.py  db_models.py  deduplicator.py  instincts.py  interfaces.py  journal.py  llm.py  logger.py  loop.py  memory.py  sandbox.py  schemas.py  telos_core.py  tools.py  usage.py  utils.py
src/telos/dashboard/: tui.py
src/telos/migrations/: add_instincts.py  add_sessions.py
templates/: critic_system.txt  goal_generation_system.txt  producer_system.txt
tests/: test_config.py  test_critic.py  test_loop.py  test_memory.py  test_sandbox.py  test_telos_core.py  test_utils.py  verify_memory.py  verify_sandbox.py  verify_vector.py
